<resources>
    <string name="app_name">Foody</string>
    <string name="recipes">Recipes</string>
    <string name="favorite">Favorite</string>
    <string name="joke">Joke</string>
    <string name="timeout">Timeout</string>
    <string name="api_key_limited">API key Limited.</string>
    <string name="resource_not_found">Resource not found.</string>
    <string name="vegan">Vegan</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_favorite_recipes">No Favorite Recipes</string>
    <string name="back_online">We\'re back online.</string>
    <string name="overview">Overview</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="undo">Undo</string>
    <string name="ok">Okay</string>

    <!-- MealType   -->
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>

    <!-- DietType   -->
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>

    <!-- Recipes Menu   -->
    <string name="search">Search</string>

    <!-- Details   -->
    <string name="title_activity_details">Details</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="recipe_saved">Recipe saved</string>

    <!-- Favorite Recipes   -->
    <string name="removed_from_favorites">Removed from Favorites</string>
    <string name="delete_favorite">Delete Favorite</string>
    <string name="delete_all">Delete All</string>
    <string name="all_recipes_removed">All recipes removed.</string>
    <string name="share">Share</string>
    <string name="nothing_left_to_remove">Noting left to remove</string>

    <plurals name="favorite_recipes">
        <item quantity="one">%d item selected</item>
        <item quantity="other">%d items selected</item>
    </plurals>
    <plurals name="deleted_recipes">
        <item quantity="one">%d recipe removed</item>
        <item quantity="other">%d recipes removed</item>
    </plurals>

</resources>
